# dotagents-management-cli

./: README.md  agents.md  debug_test.py  pyproject.toml
.agents/.backups/20260402T220349.174775Z/: metadata.json
.agents/.backups/20260402T220349.174775Z/snapshot/skills/test_skill/: SKILL.md
.agents/.backups/20260402T220410.806736Z/: metadata.json
.agents/.backups/20260402T220423.026960Z/: metadata.json
.agents/.backups/20260402T220423.026960Z/snapshot/skills/: symlinked_skill
.agents/.backups/20260402T220423.026960Z/snapshot/skills/test_skill/: SKILL.md
.agents/.backups/20260402T220446.259915Z/: metadata.json
.agents/.backups/20260402T220446.259915Z/snapshot/skills/test_skill/: SKILL.md
.agents/.backups/20260403T061013.737765Z/: metadata.json
.agents/.backups/20260403T061124.807278Z/: metadata.json
.agents/.backups/20260403T061124.807278Z/snapshot/skills/test_skill/: SKILL.md
.agents/.backups/20260403T061124.936597Z/: metadata.json
.agents/.backups/20260403T061136.732578Z/: metadata.json
.agents/.backups/20260403T061357.762473Z/: metadata.json
.agents/.backups/20260403T061357.785360Z/: metadata.json
.agents/.backups/20260403T061357.785360Z/snapshot/skills/test_skill/: SKILL.md
docs/: dotagents-management-cli-prd.md
src/dotagents_management_cli/: __init__.py  api.py  cli.py
src/manage_dotagents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  data.ts  index.css  mockData.ts
